fix logo proportion on mobile

--- a/public/css/lanyon.css
+++ b/public/css/lanyon.css
@@ -28,7 +28,7 @@
  */
 
 .masthead-logo {
-    height: 30px;
+    height: 1.2em;
     width: auto;
     vertical-align: text-bottom;
     display: inline;
